fix contrast issue and meta image

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
 :root {
     --white: #fff;
     --black: #000;
-    --esmerald: #21A0A0;
+    --esmerald: #038181;
     --grey: #ddd;
     --light-grey: #f5f5f5;
 }
